# cell-scaffold-contact

./: .gitignore  LICENSE.txt  README.md
itk2fits/: CMakeLists.txt  FitsIO.c  FitsIO.h  getoption.h  itk2fits.cpp
segment-validate/: .classpath  .project
segment-validate/src/io/: AffineCoors.java  ConvertTiffStackToFITS.java  ConverterFitsAndNifti.java  CoordinateMapper.java  Fits2DWriter.java  Fits3DWriter.java  FitsLoader.java  JSinfoWriter.java  NiftiHeader.java  Nifti_Reader.java  Nifti_Writer.java  QuaternCoors.java  ReferenceLineLoader.java  TubeSkeletonLoader.java
segment-validate/src/pipeline3D/: FiberScaffold2BinaryContact.java  FiberSkeletonSelection.java  Im2DLine.java  Im2DPoint.java  Image3DProcessingPipeline.java  Probability2Binary3DPipeline.java  Single3DFiberPipeline.java
segment-validate/src/segment3D/: Image3DCropping.java  Image3DSmoothing.java  Segment3DImage.java
segment-validate/src/shapeFeatures2D/: ShapeFeatures2D.java
segment-validate/src/test/: Segment3DImageTest.java  ShapeFeatures2DTest.java  SimilarityMetricsExtractorTest.java
segment-validate/src/threshold3D/: EGTThresh.java  MaxEntropyThresh.java  MinErrorThresh.java  OtsuThresh.java  Threshold3DImage.java  TopoStableThresh.java  TriangleThresh.java
segment-validate/src/util/: Convolve3D.java  ExtractVoxelIntensities.java  FileOper.java  (+7 more)
treebuild/: CMakeLists.txt  buildtree.h  getoption.h  imagefilters.h  smoothdiameter.cpp  smoothdiameter.h  sphear.cpp  sphear.h  tree.cpp  tree.h  treebuild.cpp  treediameters.cpp  treediameters.h  treesmooth.cpp  treesmooth.h
(+73 files in other folders)
